Share bar fixes. Updating Spotlight with new instances. Fixes for z-index.

--- a/src/main/webapp/less/components/footer.less
+++ b/src/main/webapp/less/components/footer.less
@@ -3,7 +3,7 @@
     bottom: 0px;
     width: 100%;
     max-height : 60%;
-    z-index: 99999;
+    z-index: 9;
 }
 
 #footerHeader {
